--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -127,9 +127,9 @@ a {
     transition: var(--transition);
 }
 
-.first-section .all-button {
+.first-div .all-button {
     background-color: var(--cloud-color);
-    border-color: 1px solid var(--cornflower-color);
+    border: 1px solid var(--cornflower-color);
     width: 69px;
     height:48px;
     border-radius: 4px;
@@ -143,9 +143,9 @@ a {
     cursor: pointer;
 }
 
-.first-section .web-button {
+.first-div .web-button {
     background-color:var(--cloud-color);
-    border-color: 1px solid var(--cornflower-color);
+    border: 1px solid var(--cornflower-color);
     border-radius: 4px;
     height: 48px;
     border-width: 1px;
@@ -158,9 +158,9 @@ a {
     text-align: center;
 }
 
-.first-section .app-button {
+.first-div .app-button {
     background-color: var(--cloud-color);
-    border-color: 1px solid var(--cornflower-color);
+    border: 1px solid var(--cornflower-color);
     border-radius: 4px;
     width: 78px;
     height: 48px;
@@ -174,9 +174,9 @@ a {
     text-align: center;
 }
 
-.first-section .design-button {
+.first-div .design-button {
     background-color: var(--cloud-color);
-    border-color: 1px solid var(--cornflower-color);
+    border: 1px solid var(--cornflower-color);
     border-radius: 4px;
     width: 101px;
     height: 48px;
@@ -190,9 +190,9 @@ a {
     text-align: center;
 }
 
-.first-section .marketing-button {
+.first-div .marketing-button {
     background-color: var(--cloud-color);
-    border-color: 1px solid var(--cornflower-color);
+    border: 1px solid var(--cornflower-color);
     border-radius: 4px;
     width: 126px;
     height: 48px;
@@ -256,7 +256,7 @@ a {
     background-color: var(--white-color);
     display: flex;
     flex-direction: column;
-    border-radius: 0px, 0px, 4px, 4px;
+    border-radius: 0px 0px 4px 4px;
     border: 1px solid var(--cloud-color);
 }
 
